outlined sections of each webpage, added navbar & navbar temp style

--- a/categories.html
+++ b/categories.html
@@ -2,17 +2,15 @@
 
 <html>
     <head>
-        <title> Homepage </title>
-        
+        <title>Recipes</title>
         <link rel="stylesheet" href="stylesheet.css">
-        
+
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">Categories</a>
                     <div class="dropdown-content">
-                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
                         <a href="categories.html#SoupsSection">Soups</a>
                         <a href="categories.html#DessertsSection">Desserts</a>
                         <a href="categories.html#CasserolesSection">Casseroles</a>
@@ -27,13 +25,28 @@
     </head>
 
     <body>
-        <div id="hero">
-            <!--Hero section of the home page-->
+        <div class="CategorySection">
+            <h2 id="SoupsSection">Soups</h2>
 
         </div>
 
-        <div id="favorites">
-            <!--Section of favortite recipes-->
+        <div class="CategorySection">
+            <h2 id="DessertsSection">Desserts</h2>
+
+        </div>
+
+        <div class="CategorySection">
+            <h2 id="CasserolesSection">Casseroles</h2>
+
+        </div>
+
+        <div class="CategorySection">
+            <h2 id="CrockpotsSection">Crockpots</h2>
+
+        </div>
+
+        <div class="CategorySection">
+            <h2 id="PastasSection">Pastas</h2>
 
         </div>
 
