--- a/soup2.html
+++ b/soup2.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!--Add navbar to all recipe pages-->
+        <title>Easy Creamy Vegetable Soup </title>
+        
+        <link rel="stylesheet" href="stylesheet.css">
+        <div id="navbar">
+            <ul>
+                <li><a href="homepage.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Categories</a>
+                    <div class="dropdown-content">
+                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
+                        <a href="categories.html#SoupsSection">Soups</a>
+                        <a href="categories.html#DessertsSection">Desserts</a>
+                        <a href="categories.html#CasserolesSection">Casseroles</a>
+                        <a href="categories.html#CrockpotsSection">Crockpots</a>
+                        <a href="categories.html#Pastas">Pastas</a>
+                    </div>
+                </li>
+                <li><a href="about.html">About Us</a></li>
+            </ul>   
+        </div>
+        
 	    <h1>Easy Creamy Vegetable Soup</h1>
     </head>
 
