--- a/soup3.html
+++ b/soup3.html
@@ -1,32 +1,64 @@
 <!DOCTYPE html>
 <html>
     <head>
-	    <h1></h1>
+        <title>Easy Chicken Noodle Soup</title>
+        
+        <link rel="stylesheet" href="stylesheet.css">
+        <div id="navbar">
+            <ul>
+                <li><a href="homepage.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Categories</a>
+                    <div class="dropdown-content">
+                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
+                        <a href="categories.html#SoupsSection">Soups</a>
+                        <a href="categories.html#DessertsSection">Desserts</a>
+                        <a href="categories.html#CasserolesSection">Casseroles</a>
+                        <a href="categories.html#CrockpotsSection">Crockpots</a>
+                        <a href="categories.html#Pastas">Pastas</a>
+                    </div>
+                </li>
+                <li><a href="about.html">About Us</a></li>
+            </ul>   
+        </div>
+
+	    <h1>Easy Chicken Noodle Soup</h1>
     </head>
     
     <body>
         <!--image-->
         <div class="recipeImage">
-            <img src="" alt="">
+            <img src="recipe images/quick-and-easy-chicken-noodle-soup-allrecipes.png" alt="Chicken Noodle Soup">
         </div>
         <!--Ingredients section-->
         <div class="ingredients">
             <h3>Ingredients:</h3>
             <ul>
-                <li></li>
-                <li></li>
+                <li>1 tablespoon butter</li>
+                <li>½ cup chopped onion</li>
+                <li>½ cup chopped celery</li>
+                <li>4 (14.5 oz) cans chicken broth</li>
+                <li>1 (14.5 oz) can vegetable broth</li>
+                <li>1/2 pound chopped cooked chicken breast</li>
+                <li>1 1/2 cups egg noodles</li>
+                <li>1 cup sliced carrots</li>
+                <li>1/2 teaspoon dried basil</li>
+                <li>1/2 teaspoon dried oregano</li>
+                <li>salt and ground black pepper to taste</li>
             </ul>
         </div>
         <!--Step-by-step section-->
         <div class="instructions">
             <h3>Instructions:</h3>
             <ol>
-                <li></li>
+                <li>Melt butter in a large pot over medium heat. Add onion and celery and cook until just tender, about 5 minutes.</li>
+                <li>Add chicken broth, vegetable broth, chicken, egg noodles, carrots, basil, oregano, salt, and pepper. Stir to combine and bring to a boil.</li>
+                <li>Reduce heat and simmer for 20 minutes. Then it is ready to serve.</li>
             </ol>
         </div>
     </body>
 
     <footer>
-        <p>Original recipe can be found <a href="">here</a></p>
+        <p>Original recipe can be found <a href="https://www.allrecipes.com/recipe/26460/quick-and-easy-chicken-noodle-soup/">here.</a></p>
     </footer>
 </html>
