--- a/casserole1.html
+++ b/casserole1.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Broccoli Cheese Casserole</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -55,6 +54,7 @@
                 <li>Bake in preheated oven for 30 minutes, or until golden brown.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
