--- a/casserole2.html
+++ b/casserole2.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Buffalo Chicken Casserole</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -59,6 +58,7 @@
                 <li>Bake, covered, 25-30 minutes or until heated through. Uncover; cook until cheese is browned, about 5 minutes longer. Let stand 5 minutes before serving. If desired, garnish with green onions.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
