--- a/casserole3.html
+++ b/casserole3.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Sausage Breakfast Casserole</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -61,6 +60,7 @@
                 <li>Bake for 60-70 minutes or until the eggs are set in the middle and bubbling at the edges. If the casserole begins to brown too much, loosely tent foil over the top and continue to cook until the egg is set. Remove the casserole from the oven and let sit for about 10 minutes before cutting and serving.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
