--- a/crockpot1.html
+++ b/crockpot1.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Crockpot Apple Cider</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -51,6 +50,7 @@
                 <li>Place cider and brown sugar in a 3-qt. slow cooker; stir until sugar dissolves. Add spice bag. Place orange slices on top. Cover and cook on low for 2-3 hours or until heated through. Discard spice bag.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
