--- a/crockpot2.html
+++ b/crockpot2.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Pozole Rojo</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -62,6 +61,7 @@
                 <li>Afterward, transfer the browned pork into the pot with any residual juices that have been collected into a large slow cooker vessel (at least 6-quarts). Add the blended chile mixture into the pot along with the cumin, oregano, chipotle powder (if using), bay leaves, hominy, and broth. Stir until fully combined. Cook on low for 6-8 hours or on high for 4-5 hours- stirring the pozole every so often. Then serve with desired toppings.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
