--- a/crockpot3.html
+++ b/crockpot3.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Punpkin Cranberry Bread Pudding</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -61,6 +60,7 @@
                 <li>For sauce, bring sugar and water to a boil in a large saucepan over medium heat. Cook until sugar is dissolved and mixture turns golden amber, about 20 minutes. Gradually stir in cream until smooth. Remove from heat; stir in vanilla. Serve warm with bread pudding. If desired, add a scoop of vanilla ice cream to each serving.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
