--- a/dessert1.html
+++ b/dessert1.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Earl Grey Cake</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -69,6 +68,7 @@
                 <li>To assemble cake, brush each layer with earl grey simple syrup; top middle with 1/2 cup frosting. Stack layers on top of each other; spread top and sides with remaining frosting. Slice and serve.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
