--- a/dessert2.html
+++ b/dessert2.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Pineapple Sherbet</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -49,6 +48,7 @@
                 <li>Fill cylinder of ice cream maker no more than two-thirds full; freeze according to the manufacturer’s directions. Transfer sherbet to freezer containers, allowing headspace for expansion. Freeze until firm, 8 hours or overnight.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
