--- a/dessert3.html
+++ b/dessert3.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Oreo Cheesecake Cookies</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -61,6 +60,7 @@
                 <li>Bake until edges and tops are browned, 15-20 minutes. Cool on a baking sheet for 5 minutes before removing from pans to wire rack. Store in the refrigerator.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
