--- a/pasta1.html
+++ b/pasta1.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Green Spaghetti</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -58,6 +57,7 @@
                 <li>Melt butter in a large skillet over medium heat; add pepper mixture. Cook and stir until heated through, about 3 minutes. Drain spaghetti; stir into sauce. Serve with Cotija cheese and additional cilantro.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
