--- a/pasta2.html
+++ b/pasta2.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Air-Fryer Mac & Cheese</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -55,6 +54,7 @@
                 <li>Place pan in air fryer basket; bake 25 minutes, stirring halfway through. Top with remaining 1/2 cup shredded cheese; bake until top is melted and bubbly, about 5 minutes longer.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
