--- a/pasta3.html
+++ b/pasta3.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Mexican Macaroni Salad</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
-        
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -61,6 +60,7 @@
                 <li>Adjust with salt and pepper to your taste, cover the bowl and place it in the fridge until serving.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
