--- a/soup1.html
+++ b/soup1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Taco Soup</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
         <div id="navbar">
             <ul>
@@ -59,6 +59,7 @@
                 <li>Garnish with your favorite taco toppings and serve.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
