--- a/soup2.html
+++ b/soup2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Easy Creamy Vegetable Soup </title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
         <div id="navbar">
             <ul>
@@ -21,7 +21,6 @@
                 <li><a href="about.html">About Us</a></li>
             </ul>   
         </div>
-        
 	    <h1>Easy Creamy Vegetable Soup</h1>
     </head>
 
@@ -63,10 +62,10 @@
                 <li>Stir in the cream. Taste for seasoning and adjust with more salt and pepper if necessary.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
         <p>Original recipe can be found <a href="https://www.inspiredtaste.net/9603/creamy-vegetable-soup-recipe/">here</a></p>
     </footer>
 </html>
-
