--- a/soup3.html
+++ b/soup3.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Easy Chicken Noodle Soup</title>
-        
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
         <div id="navbar">
             <ul>
@@ -56,6 +56,7 @@
                 <li>Reduce heat and simmer for 20 minutes. Then it is ready to serve.</li>
             </ol>
         </div>
+	<button onclick="copyRecipe()">Copy Recipe</button>
     </body>
 
     <footer>
