--- a/casserole1.html
+++ b/casserole1.html
@@ -4,6 +4,7 @@
         <title>Broccoli Cheese Casserole</title>
         <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
+	<!--Navigation bar-->
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
@@ -21,14 +22,16 @@
                 <li><a href="about.html">About Us</a></li>
             </ul>   
         </div>
-
+	<!--Title-->
+	<div id ="title">
 	    <h1>Broccoli Cheese Casserole</h1>
+	</div>
     </head>
     
     <body>
-        <!--image-->
+        <!--Image-->
         <div class="recipeImage">
-            <img src="recipe images/25286broccoli-cheese-casserole.png" alt="Broccoli cheese Casserole on a serving spoon">
+            <img src="recipe images/25286broccoli-cheese-casserole.png" alt="Broccoli Cheese Casserole on a serving spoon">
         </div>
         <!--Ingredients section-->
         <div class="ingredients">
