--- a/casserole1.html
+++ b/casserole1.html
@@ -33,7 +33,7 @@
             <img src="recipe images/25286broccoli-cheese-casserole.png" alt="Broccoli Cheese Casserole on a serving spoon">
         </div>
         <!--Ingredients section-->
-        <div id="ingredients">
+        <div class="ingredients">
             <h3>Ingredients:</h3>
             <ul>
                 <li>½ cup uncooked long-grain rice</li>
@@ -46,7 +46,7 @@
             </ul>
         </div>
         <!--Instructions section-->
-        <div id="instructions">
+        <div class="instructions">
             <h3>Instructions:</h3>
             <ol>
                 <li>Preheat oven to 350 degrees F (175 degrees C).</li>
