--- a/casserole3.html
+++ b/casserole3.html
@@ -7,30 +7,32 @@
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Categories</a>
-                    <div class="dropdown-content">
-                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                        <a href="categories.html#SoupsSection">Soups</a>
-                        <a href="categories.html#DessertsSection">Desserts</a>
-                        <a href="categories.html#CasserolesSection">Casseroles</a>
-                        <a href="categories.html#CrockpotsSection">Crockpots</a>
-                        <a href="categories.html#Pastas">Pastas</a>
-                    </div>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Categories</a>
+			<!--Dropdown menu with each link jumping to specific setion of categories webpage-->
+			<div class="dropdown-content">
+                        	<a href="categories.html#SoupsSection">Soups</a>
+                        	<a href="categories.html#DessertsSection">Desserts</a>
+                        	<a href="categories.html#CasserolesSection">Casseroles</a>
+                        	<a href="categories.html#CrockpotsSection">Crockpots</a>
+                        	<a href="categories.html#Pastas">Pastas</a>
+                    	</div>
                 </li>
                 <li><a href="about.html">About Us</a></li>
             </ul>   
         </div>
+	<!--Recipe title section-->
+	<div id ="recipeTitle">
 	    <h1>Sausage Breakfast Casserole</h1>
+	</div>
     </head>
     
     <body>
-        <!--image-->
-        <div class="recipeImage">
+        <!--Recipe image section-->
+        <div id="recipeImage">
             <img src="recipe images/Sausage-Breakfast-Casseroled.jpg" alt="Sausage Breakfast Casserole in a casserole dish">
         </div>
         <!--Ingredients section-->
-        <div class="ingredients">
+        <div id="ingredients">
             <h3>Ingredients:</h3>
             <ul>
                 <li>1 ½ pounds pork sausage</li>
@@ -48,8 +50,8 @@
                 <li>3 cups frozen shredded hash browns</li>
             </ul>
         </div>
-        <!--Step-by-step section-->
-        <div class="instructions">
+       <!--Instructions section-->
+        <div id="instructions">
             <h3>Instructions:</h3>
             <ol>
                 <li>Preheat the oven to 350°F. Spray a 9 X 13-inch casserole dish with cooking spray and set aside.</li>
@@ -60,10 +62,16 @@
                 <li>Bake for 60-70 minutes or until the eggs are set in the middle and bubbling at the edges. If the casserole begins to brown too much, loosely tent foil over the top and continue to cook until the egg is set. Remove the casserole from the oven and let sit for about 10 minutes before cutting and serving.</li>
             </ol>
         </div>
-	<button onclick="copyRecipe()">Copy Recipe</button>
+	<!--Button bar section-->
+	<div id="buttonBar">
+		<button onclick="copyRecipe()">Copy Recipe</button>
+	</div>
     </body>
 
     <footer>
-        <p>Original recipe can be found <a href="https://www.foodiecrush.com/sausage-breakfast-casserole/">here.</a></p>
+	<!--Original credits section-->
+	<div id="credits">
+        	<p>Original recipe can be found <a href="https://www.foodiecrush.com/sausage-breakfast-casserole/">here.</a></p>
+	</div>
     </footer>
 </html>
