--- a/casserole2.html
+++ b/casserole2.html
@@ -29,7 +29,7 @@
     
     <body>
         <!--Recipe image section-->
-        <div class="recipeImage">
+        <div id="recipeImage">
             <img src="recipe images/Buffalo-Chicken-Casserole.png" alt="Casserole dish with Buffalo Chicken Casserole">
         </div>
         <!--Ingredients section-->
@@ -69,7 +69,7 @@
      <footer>
 	<!--Original credits section-->
 	<div id="credits">
-        	<p>Original recipe can be found <a href="https://www.allrecipes.com/recipe/25286/broccoli-cheese-casserole/">here.</a></p>
+        	<p>Original recipe can be found <a href="https://www.tasteofhome.com/recipes/buffalo-chicken-casserole/">here.</a></p>
 	</div>
     </footer>
 </html>
