--- a/crockpot1.html
+++ b/crockpot1.html
@@ -29,11 +29,11 @@
     
     <body>
         <!--Recipe image section-->
-        <div class="recipeImage">
+        <div id="recipeImage">
             <img src="recipe images/Crockpot-Apple-Cider.jpg" alt="Apple Cider in a crockpot and glass cups">
         </div>
         <!--Ingredients section-->
-        <div class="ingredients">
+        <div id="ingredients">
             <h3>Ingredients:</h3>
             <ul>
                 <li>2 cinnamon sticks (3 inches each)</li>
@@ -45,7 +45,7 @@
             </ul>
         </div>
        <!--Instructions section-->
-        <div class="instructions">
+        <div id="instructions">
             <h3>Instructions:</h3>
             <ol>
                 <li>Place cinnamon, cloves and allspice on a double thickness of cheesecloth; bring up corners of cloth and tie with a string to form a bag.</li>
