--- a/crockpot1.html
+++ b/crockpot1.html
@@ -23,7 +23,7 @@
         </div>
 	<!--Recipe title section-->
 	<div id ="recipeTitle">
-	    <h1>Broccoli Cheese Casserole</h1>
+	    <h1>Crockpot Apple Cider</h1>
 	</div>
     </head>
     
