--- a/crockpot2.html
+++ b/crockpot2.html
@@ -4,34 +4,36 @@
         <title>Pozole Rojo</title>
         <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
+	<!--Navigation bar-->
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Categories</a>
-                    <div class="dropdown-content">
-                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                        <a href="categories.html#SoupsSection">Soups</a>
-                        <a href="categories.html#DessertsSection">Desserts</a>
-                        <a href="categories.html#CasserolesSection">Casseroles</a>
-                        <a href="categories.html#CrockpotsSection">Crockpots</a>
-                        <a href="categories.html#Pastas">Pastas</a>
-                    </div>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Categories</a>
+			<!--Dropdown menu with each link jumping to specific setion of categories webpage-->
+                    	<div class="dropdown-content">
+                        	<a href="categories.html#SoupsSection">Soups</a>
+                        	<a href="categories.html#DessertsSection">Desserts</a>
+                        	<a href="categories.html#CasserolesSection">Casseroles</a>
+                        	<a href="categories.html#CrockpotsSection">Crockpots</a>
+                        	<a href="categories.html#Pastas">Pastas</a>
+                    	</div>
                 </li>
                 <li><a href="about.html">About Us</a></li>
             </ul>   
         </div>
-
+	<!--Recipe title section-->
+	<div id ="recipeTitle">
 	    <h1>Pozole Rojo (Authentic Mexican Pork & Hominy Stew)</h1>
+	</div>
     </head>
     
     <body>
-        <!--image-->
-        <div class="recipeImage">
+        <!--Recipe image section-->
+        <div id="recipeImage">
             <img src="recipe images/pozole rojo.jpg" alt="A bowl of Pozole Rojo with toppings">
         </div>
         <!--Ingredients section-->
-        <div class="ingredients">
+        <div id="ingredients">
             <h3>Ingredients:</h3>
             <ul>
                 <li>4 dried guajillo chiles</li>
@@ -50,8 +52,8 @@
                 <li>Thinly sliced cabbage, sliced radish, sliced jalapeños, cotija cheese, chopped avocado, lime wedges & fresh chopped cilantro, as desired.</li>
             </ul>
         </div>
-        <!--Step-by-step section-->
-        <div class="instructions">
+        <!--Instructions section-->
+        <div id="instructions">
             <h3>Instructions:</h3>
             <ol>
                 <li>Prep the chiles: Cut the stems off the guajillo and ancho chiles. Then shake out the inner seeds within each chile and place them into a large bowl. Cover the chiles with boiling water (ensuring they’re fully submerged) and set aside for the chiles to soak and rehydrate. Meanwhile, move on with the recipe.</li>
@@ -61,10 +63,16 @@
                 <li>Afterward, transfer the browned pork into the pot with any residual juices that have been collected into a large slow cooker vessel (at least 6-quarts). Add the blended chile mixture into the pot along with the cumin, oregano, chipotle powder (if using), bay leaves, hominy, and broth. Stir until fully combined. Cook on low for 6-8 hours or on high for 4-5 hours- stirring the pozole every so often. Then serve with desired toppings.</li>
             </ol>
         </div>
-	<button onclick="copyRecipe()">Copy Recipe</button>
+	<!--Button bar section-->
+	<div id="buttonBar">
+		<button onclick="copyRecipe()">Copy Recipe</button>
+	</div>
     </body>
 
     <footer>
-        <p>Original recipe can be found <a href="https://www.butterbeready.com/pozole-rojo/">here.</a></p>
+	<!--Original credits section-->
+	<div id="credits">
+        	<p>Original recipe can be found <a href="https://www.butterbeready.com/pozole-rojo/">here.</a></p>
+	</div>
     </footer>
 </html>
