--- a/crockpot3.html
+++ b/crockpot3.html
@@ -4,34 +4,36 @@
         <title>Punpkin Cranberry Bread Pudding</title>
         <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
+	<!--Navigation bar-->
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Categories</a>
-                    <div class="dropdown-content">
-                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                        <a href="categories.html#SoupsSection">Soups</a>
-                        <a href="categories.html#DessertsSection">Desserts</a>
-                        <a href="categories.html#CasserolesSection">Casseroles</a>
-                        <a href="categories.html#CrockpotsSection">Crockpots</a>
-                        <a href="categories.html#Pastas">Pastas</a>
-                    </div>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Categories</a>
+                    	<!--Dropdown menu with each link jumping to specific setion of categories webpage-->
+			<div class="dropdown-content">
+                        	<a href="categories.html#SoupsSection">Soups</a>
+                        	<a href="categories.html#DessertsSection">Desserts</a>
+                        	<a href="categories.html#CasserolesSection">Casseroles</a>
+                        	<a href="categories.html#CrockpotsSection">Crockpots</a>
+                        	<a href="categories.html#Pastas">Pastas</a>
+                    	</div>
                 </li>
                 <li><a href="about.html">About Us</a></li>
             </ul>   
         </div>
-
+	<!--Recipe title section-->
+	<div id ="recipeTitle">
 	    <h1>Pumpkin Cranberry Bread Pudding</h1>
+	</div>
     </head>
     
     <body>
-        <!--image-->
-        <div class="recipeImage">
+        <!--Recipe image section-->
+        <div id="recipeImage">
             <img src="recipe images/Pumpkin-Cranberry-Bread-Pudding.png" alt="A bowl of Pumpkin Cranberry Pudding with a scoop of icecream.">
         </div>
         <!--Ingredients section-->
-        <div class="ingredients">
+        <div id="ingredients">
             <h3>Ingredients:</h3>
             <ul>
                 <li>8 slices cinnamon bread, cut into 1-inch cubes</li>
@@ -52,18 +54,24 @@
                 <li>Vanilla ice cream, optional</li>
             </ul>
         </div>
-        <!--Step-by-step section-->
-        <div class="instructions">
+        <!--Instructions section-->
+        <div id="instructions">
             <h3>Instructions:</h3>
             <ol>
                 <li>Place bread cubes in a greased 3- or 4-qt. slow cooker. Combine the next 8 ingredients; stir in cranberries. Pour over bread. Cook, covered, on low until a knife inserted in the center comes out clean, 3-4 hours.</li>
                 <li>For sauce, bring sugar and water to a boil in a large saucepan over medium heat. Cook until sugar is dissolved and mixture turns golden amber, about 20 minutes. Gradually stir in cream until smooth. Remove from heat; stir in vanilla. Serve warm with bread pudding. If desired, add a scoop of vanilla ice cream to each serving.</li>
             </ol>
         </div>
-	<button onclick="copyRecipe()">Copy Recipe</button>
+	<!--Button bar section-->
+	<div id="buttonBar">
+		<button onclick="copyRecipe()">Copy Recipe</button>
+	</div>
     </body>
 
     <footer>
-        <p>Original recipe can be found <a href="https://www.tasteofhome.com/recipes/pumpkin-cranberry-bread-pudding/">here.</a></p>
+        <!--Original credits section-->
+	<div id="credits">
+        	<p>Original recipe can be found <a href="https://www.tasteofhome.com/recipes/pumpkin-cranberry-bread-pudding/">here.</a></p>
+	</div>
     </footer>
 </html>
