--- a/pasta1.html
+++ b/pasta1.html
@@ -4,34 +4,36 @@
         <title>Green Spaghetti</title>
         <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
+	<!--Navigation bar-->
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Categories</a>
-                    <div class="dropdown-content">
-                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                        <a href="categories.html#SoupsSection">Soups</a>
-                        <a href="categories.html#DessertsSection">Desserts</a>
-                        <a href="categories.html#CasserolesSection">Casseroles</a>
-                        <a href="categories.html#CrockpotsSection">Crockpots</a>
-                        <a href="categories.html#Pastas">Pastas</a>
-                    </div>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Categories</a>
+                	<!--Dropdown menu with each link jumping to specific setion of categories webpage-->
+			<div class="dropdown-content">
+                        	<a href="categories.html#SoupsSection">Soups</a>
+                        	<a href="categories.html#DessertsSection">Desserts</a>
+                        	<a href="categories.html#CasserolesSection">Casseroles</a>
+                        	<a href="categories.html#CrockpotsSection">Crockpots</a>
+                        	<a href="categories.html#Pastas">Pastas</a>
+                    	</div>
                 </li>
                 <li><a href="about.html">About Us</a></li>
             </ul>   
         </div>
-	    
-        <h1>Green spaghetti (Espagueti Verde)</h1>
+	<!--Recipe title section-->
+	<div id ="recipeTitle">
+	    <h1>Green Spaghetti (Espagueti Verde)</h1>
+	</div>
     </head>
     
     <body>
-        <!--image-->
-        <div class="recipeImage">
+        <!--Recipe image section-->
+        <div id="recipeImage">
             <img src="recipe images/Green-Spaghetti.jpg" alt="A bowl of green spaghetti.">
         </div>
         <!--Ingredients section-->
-        <div class="ingredients">
+        <div id="ingredients">
             <h3>Ingredients:</h3>
             <ul>
                 <li>4 poblano peppers</li>
@@ -48,8 +50,8 @@
                 <li>Crumbled Cotija cheese or queso fresco</li>
             </ul>
         </div>
-        <!--Step-by-step section-->
-        <div class="instructions">
+        <!--Instructions section-->
+        <div id="instructions">
             <h3>Instructions:</h3>
             <ol>
                 <li>Place peppers on a foil-lined baking sheet. Broil 4 in. from heat until skins blister, about 5 minutes. With tongs, rotate peppers a quarter turn. Broil and rotate until all sides are blistered and blackened. Immediately place peppers in a large bowl; let stand, covered, 20 minutes.</li>
@@ -57,10 +59,16 @@
                 <li>Melt butter in a large skillet over medium heat; add pepper mixture. Cook and stir until heated through, about 3 minutes. Drain spaghetti; stir into sauce. Serve with Cotija cheese and additional cilantro.</li>
             </ol>
         </div>
-	<button onclick="copyRecipe()">Copy Recipe</button>
+	<!--Button bar section-->
+	<div id="buttonBar">
+		<button onclick="copyRecipe()">Copy Recipe</button>
+	</div>
     </body>
 
     <footer>
-        <p>Original recipe can be found <a href="https://www.tasteofhome.com/recipes/green-spaghetti-recipe/">here.</a></p>
+	<!--Original credits section-->
+	<div id="credits">
+        	<p>Original recipe can be found <a href="https://www.tasteofhome.com/recipes/green-spaghetti-recipe/">here.</a></p>
+	</div>
     </footer>
 </html>
