--- a/crockpot3.html
+++ b/crockpot3.html
@@ -46,7 +46,7 @@
                 <li>1/2 teaspoon ground cinnamon</li>
                 <li>1/4 teaspoon ground nutmeg</li>
                 <li>1/2 cup dried cranberries</li>
-                <h4>SAUCE: </h4>
+                <h4>Sauce:</h4>
                 <li>1 cup sugar</li>
                 <li>2/3 cup water</li>
                 <li>1 cup heavy whipping cream</li>
