--- a/pasta3.html
+++ b/pasta3.html
@@ -42,7 +42,7 @@
                 <li>1 cup pineapple (diced)</li>
                 <li>½ cup carrots (shredded)</li>
                 <li>2 Tbsp pickled jalapenos (chopped)</li>
-                <b>Dressing:</b>
+                <h4>Dressing:</h4>
                 <li>¾ cup mayonnaise</li>
                 <li>¾ cup Mexican crema (or sour cream or yogurt)</li>
                 <li>2 Tbsp Yellow mustard</li>
