--- a/about.html
+++ b/about.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <link rel="stylesheet" href="stylesheet.css">
-
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Categories</a>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Categories</a>
                     <div class="dropdown-content">
                         <a href="categories.html#SoupsSection">Soups</a>
                         <a href="categories.html#DessertsSection">Desserts</a>
@@ -25,16 +22,20 @@
 
     <body>
         <div id="aboutWebsite">
-            <!--at least 2 paragraphs regarding the inspiration for this page
+            <!--At least 2 paragraphs regarding the inspiration for this page
             ie: we're doing it as a class project, sharing some of our favorite recipes, etc.-->
-            <h2>About (website name):</h2>
+            <h2>About Our Recipes:/h2>
+            <p>Our Recipes was created as a fun way to fulfill the project requirements for the Web Programming class at the
+                University of Houston-Downtown, and a place to put all of our favorite recipes into one place! Spanning different
+                categories, from crockpot recipes to pastas and all the way to desserts, we believe there is something for everyone!</p>
+            <p>We hope you have half as much fun combing through, cooking and enjoying these recipes as we did compiling them!
+            Thank you for stopping by!</p>
         </div>
-
         <div id="aboutUs">
-            <!--about us section: can include picture and small paragraph about ourselves, even include website or github link-->
+            <!--About us section: can include picture and small paragraph about ourselves, even include website or github link-->
             <h2>About Us:</h2>
+            <p>Our Recipes is built and maintained by Lourdes "Lola" Renteria, Christian Tuarez, and Chris Charles, all of them
+                senior Computer Science students at the University of Houston-Downtown.</p>
         </div>
-
     </body>
-    
 </html>
