page file organizing and homepage sections
I put all recipes pages in their own file.
I had to change the links that referenced those pages on the categories page.
Lastly I added some sections to the homepage.

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <div id="aboutWebsite">
             <!--At least 2 paragraphs regarding the inspiration for this page
             ie: we're doing it as a class project, sharing some of our favorite recipes, etc.-->
-            <h2>About Our Recipes:/h2>
+            <h2>About Our Recipes:</h2>
             <p>Our Recipes was created as a fun way to fulfill the project requirements for the Web Programming class at the
                 University of Houston-Downtown, and a place to put all of our favorite recipes into one place! Spanning different
                 categories, from crockpot recipes to pastas and all the way to desserts, we believe there is something for everyone!</p>
