--- a/categories.html
+++ b/categories.html
@@ -28,45 +28,45 @@
         <div class="CategorySection">
             <h2 id="SoupsSection">Soups</h2>
             	<ul>
-                	<li><a href="soup1.html">Taco Soup</a></li>
-                	<li><a href="soup2.html">Easy Creamy Vegetable Soup</a></li>
-                	<li><a href="soup3.html">Easy Chicken Noodle Soup</a></li>
+                	<li><a href="RecipePages/soup1.html">Taco Soup</a></li>
+                	<li><a href="RecipePages/soup2.html">Easy Creamy Vegetable Soup</a></li>
+                	<li><a href="RecipePages/soup3.html">Easy Chicken Noodle Soup</a></li>
             	</ul> 
         </div>
 
         <div class="CategorySection">
             <h2 id="DessertsSection">Desserts</h2>
 		<ul>
-                	<li><a href="dessert1.html">Earl Grey Cake</a></li>
-                	<li><a href="dessert2.html">Pineapple Sherbet</a></li>
-                	<li><a href="dessert3.html">Oreo Cheesecake Cookies</a></li>
+                	<li><a href="RecipePages/dessert1.html">Earl Grey Cake</a></li>
+                	<li><a href="RecipePages/dessert2.html">Pineapple Sherbet</a></li>
+                	<li><a href="RecipePages/dessert3.html">Oreo Cheesecake Cookies</a></li>
             	</ul>
         </div>
 
         <div class="CategorySection">
             <h2 id="CasserolesSection">Casseroles</h2>
 	    	<ul>
-                	<li><a href="casserole1.html">Broccoli Cheese Casserole</a></li>
-                	<li><a href="casserole2.html">Buffalo Chicken Casserole</a></li>
-                	<li><a href="casserole3.html">Sausage Breakfast Casserole</a></li>
+                	<li><a href="RecipePages/casserole1.html">Broccoli Cheese Casserole</a></li>
+                	<li><a href="RecipePages/casserole2.html">Buffalo Chicken Casserole</a></li>
+                	<li><a href="RecipePages/casserole3.html">Sausage Breakfast Casserole</a></li>
             	</ul>
         </div>
 
         <div class="CategorySection">
             <h2 id="CrockpotsSection">Crockpots</h2>
 	    	<ul>
-                	<li><a href="crockpot1.html">Crockpot Apple Cider</a></li>
-                	<li><a href="crockpot2.html">Pozole Rojo</a></li>
-                	<li><a href="crockpot3.html">Pumpkin Cranberry Bread Pudding</a></li>
+                	<li><a href="RecipePages/crockpot1.html">Crockpot Apple Cider</a></li>
+                	<li><a href="RecipePages/crockpot2.html">Pozole Rojo</a></li>
+                	<li><a href="RecipePages/crockpot3.html">Pumpkin Cranberry Bread Pudding</a></li>
             	</ul>
         </div>
 
         <div class="CategorySection">
             <h2 id="PastasSection">Pastas</h2>
 	    	<ul>
-                	<li><a href="pasta1.html">Green Spaghetti</a></li>
-                	<li><a href="pasta2.html">Air-Fryer Mac & Cheese</a></li>
-                	<li><a href="pasta3.html">Mexican Macaroni Salad</a></li>
+                	<li><a href="RecipePages/pasta1.html">Green Spaghetti</a></li>
+                	<li><a href="RecipePages/pasta2.html">Air-Fryer Mac & Cheese</a></li>
+                	<li><a href="RecipePages/pasta3.html">Mexican Macaroni Salad</a></li>
             	</ul>
         </div>
     </body>
