--- a/homepage.html
+++ b/homepage.html
@@ -27,15 +27,17 @@
     </head>
 
     <body>
-        <div id="hero">
-            <!--Hero section of the home page-->
+        <section class="hero">
+            <h1>Discover Delicious Recipes for Every Occasion</h1>
+            <p>Explore a world of flavors with easy-to-follow recipes for every taste and skill level. 
+                Whether you're a beginner or a seasoned chef, we have something for you. Find inspiration, 
+                share your creations, and make mealtime a joy!</p>
+        </section>
 
-        </div>
-
-        <div id="favorites">
-            <!--Section of favortite recipes-->
-
-        </div>
+        <section class="featured">
+            <h1>Featured Recipes</h1>
+            <p>Discover our most popular featured recipes, curated to inspire your next delicious meal!</p>
+        </section>
 
     </body>
 
