--- a/RecipePages/casserole2.html
+++ b/RecipePages/casserole2.html
@@ -63,6 +63,8 @@
 	<!--Button bar section-->
 	<div id="buttonBar">
 		<button onclick="copyRecipe()">Copy Recipe</button>
+		<button onclick="printPage()">Print Page</button>
+		<button onclick="goBack()">Go Back</button>
 	</div>
     </body>
 
