--- a/RecipePages/crockpot1.html
+++ b/RecipePages/crockpot1.html
@@ -55,6 +55,8 @@
 	<!--Button bar section-->
 	<div id="buttonBar">
 		<button onclick="copyRecipe()">Copy Recipe</button>
+		<button onclick="printPage()">Print Page</button>
+		<button onclick="goBack()">Go Back</button>
 	</div>
     </body>
 
