Hero Section Complete
Created a hero section with a background image and text.

--- a/homepage.html
+++ b/homepage.html
@@ -28,10 +28,15 @@
 
     <body>
         <section class="hero">
-            <h1>Discover Delicious Recipes for Every Occasion</h1>
-            <p>Explore a world of flavors with easy-to-follow recipes for every taste and skill level. 
-                Whether you're a beginner or a seasoned chef, we have something for you. Find inspiration, 
-                share your creations, and make mealtime a joy!</p>
+            <img src="OtherImages/Main Section.jpg">
+            <div class="text-container">
+                <h1>Discover Delicious</h1>
+                <h1>Recipes for Every</h1>
+                <h1>Occasion</h1>
+                <p>Explore a world of flavors with easy-to-follow recipes for every taste and skill level.</p> 
+                <p>Whether you're a beginner or a seasoned chef, we have something for you.</p>
+                <p>Find inspiration, share your creations, and make mealtime a joy!</p>
+            </div>
         </section>
 
         <section class="featured">
