--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
         
         <link rel="stylesheet" href="stylesheet.css">
         
-        <div id="navbar">
+        <section class="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
                 <li class="dropdown">
@@ -22,7 +22,7 @@
                 </li>
                 <li><a href="about.html">About Us</a></li>
             </ul>   
-        </div>
+        </section>
 
     </head>
 
