Website title change with fonts
Changed the recipe website name/title to Dish Delight. Also added 2 font families.

--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title> Homepage </title>
+        <title>Dish Delight</title>
         
         <link rel="stylesheet" href="stylesheet.css">
         
@@ -21,7 +21,8 @@
                     </div>
                 </li>
                 <li><a href="about.html">About Us</a></li>
-            </ul>   
+                <h1>Dish Delight</h1>
+            </ul>
         </section>
 
     </head>
