Navbar and Casserole1 started
Distributed the edited nav bar to all other pages. Casserol1 page has started to be edited.

--- a/RecipePages/crockpot2.html
+++ b/RecipePages/crockpot2.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
+
 <html>
     <head>
-        <title>Pozole Rojo</title>
-        <script src="scripts.js"></script>
-        <link rel="stylesheet" href="stylesheet.css">
-	<!--Navigation bar-->
-        <div id="navbar">
+        <title>Dish Delight</title>
+        
+        <link rel="stylesheet" href="/stylesheet.css">
+        
+        <section class="navbar">
             <ul>
-                <li><a href="homepage.html">Home</a></li>
-                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Categories</a>
-			<!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                    	<div class="dropdown-content">
-                        	<a href="categories.html#SoupsSection">Soups</a>
-                        	<a href="categories.html#DessertsSection">Desserts</a>
-                        	<a href="categories.html#CasserolesSection">Casseroles</a>
-                        	<a href="categories.html#CrockpotsSection">Crockpots</a>
-                        	<a href="categories.html#Pastas">Pastas</a>
-                    	</div>
+                <li><a href="/homepage.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Categories</a>
+                    <div class="dropdown-content">
+                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
+                        <a href="/categories.html#SoupsSection">Soups</a>
+                        <a href="/categories.html#DessertsSection">Desserts</a>
+                        <a href="/categories.html">Casseroles</a>
+                        <a href="/categories.html#CrockpotsSection">Crockpots</a>
+                        <a href="/categories.html#Pastas">Pastas</a>
+                    </div>
                 </li>
-                <li><a href="about.html">About Us</a></li>
-            </ul>   
-        </div>
+                <li><a href="/about.html">About Us</a></li>
+                <h1>Dish Delight</h1>
+            </ul>
+        </section>
 	<!--Recipe title section-->
 	<div id ="recipeTitle">
 	    <h1>Pozole Rojo (Authentic Mexican Pork & Hominy Stew)</h1>
