--- a/categories.html
+++ b/categories.html
@@ -2,15 +2,17 @@
 
 <html>
     <head>
-        <title>Recipes</title>
+        <title>Dish Delight</title>
+        
         <link rel="stylesheet" href="stylesheet.css">
-
-        <div id="navbar">
+        
+        <section class="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">Categories</a>
                     <div class="dropdown-content">
+                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
                         <a href="categories.html#SoupsSection">Soups</a>
                         <a href="categories.html#DessertsSection">Desserts</a>
                         <a href="categories.html#CasserolesSection">Casseroles</a>
@@ -19,9 +21,9 @@
                     </div>
                 </li>
                 <li><a href="about.html">About Us</a></li>
-            </ul>   
-        </div>
-
+                <h1>Dish Delight</h1>
+            </ul>
+        </section>
     </head>
 
     <body>
