First recipe page is styled
broccoli cheddar casserole page is finished. We can now use it as a template for all other recipe pages.

--- a/RecipePages/casserole1.html
+++ b/RecipePages/casserole1.html
@@ -31,7 +31,7 @@
             <h1>Broccoli Cheese Casserole</h1>
         </section>
         <!--Recipe image section-->
-        <section class="recipe-Image">
+        <section class="recipe-image">
             <img src="/recipe images/25286broccoli-cheese-casserole.png" alt="Broccoli Cheese Casserole on a serving spoon">
         </section>
         <!--Ingredients section-->
